@@ -48,6 +48,11 @@ v1.7 (XXXX-XX-XX)
 - Added AnySphericalPotential, the potential of an arbitrary spherical
   density distribution.
 
+- Updated the definition of a Potential's mass to always return the
+  mass within a spherical shell if only one argument is
+  specified. Also implemented faster implementations of the masses of
+  SCF and diskSCF potentials.
+
 - Added inverse action-angle transformations for the isochrone
   potential (actionAngleIsochroneInverse) and for a one-dimensional
   harmonic oscillator (actionAngleHarmonicInverse; also added the
